[tool.poetry]
name = "api-workshop-2"
version = "0.1.0"
description = ""
authors = ["Daniel"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
taskipy = "^1.12.2"
pytest = "^7.4.4"
httpx = "^0.26.0"
pandas = "^2.2.0"
pydantic = "^2.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
test1 = "pytest -v"
run = "uvicorn app.main:app --reload"